added files.exclude to settins

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,7 @@
             "env": {
                 "DJANGO_TESTER_USERNAME": "olaf",
                 "DJANGO_TESTER_PASSWORD": "abc1234",
-                "DJANGO_DEBUG": "True",
+                "DJANGO_DEBUG": "False",
             }
         },
     ]
